--- a/exercises/templates/grades.html
+++ b/exercises/templates/grades.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>TODO: Complete Part 2</h1>
+    {% if score >= 90 %}
+        <p>Excellent</p>
+    {% elif score >= 70%}
+        <p>Good Job</p>
+    {% else %}
+        <p>Needs Improvement</p>
 {% endblock %}
