--- a/exercises/templates/form.html
+++ b/exercises/templates/form.html
@@ -10,9 +10,9 @@
         <button type="submit">Submit</button>
     </form>
 
-    {% if submitted_name %}
+    {% if username %}
         <div class="box">
-            Hello {{ submitted_name }}!
+            Hello {{ username }}!
         </div>
     {% endif %}
 
