--- a/exercises/templates/grades.html
+++ b/exercises/templates/grades.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if score >= 90 %}
+    {% if grade >= 90 %}
         <p>Excellent</p>
-    {% elif score >= 70%}
+    {% elif grade >= 70%}
         <p>Good Job</p>
     {% else %}
         <p>Needs Improvement</p>
+    {% endif %}
 {% endblock %}
